kubernetes/base/kimai/base/resources/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kimai-mysql
  labels:
    component: db
spec:
  selector:
    project: kimai
    component: db
  ports:
    - port: 3306
      name: mysql
