kubernetes/base/kimai/base/resources/kimai-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kimai
  labels:
    component: kimai
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
  - host: kimai.k8s.funkyboy.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kimai
            port:
              number: 8001
  tls:
    - hosts:
        - kimai.k8s.funkyboy.zone
      secretName: kimai-ingress-cert
